# article-rec-training-job

./: .gitignore  .pre-commit-config.yaml  :w  Brewfile  Dockerfile  GA4Recs.ipynb  Karfile  README.md  \  ]  app.py  backfill_task.py  config-example.yaml  entrypoint  env.json  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
.dvc/: config
.github/workflows/: mypy.yml  on-pull-request.yaml  test.yml
article_rec_training_job/: _0_fetch_events.py  config.py  tasks.py
article_rec_training_job/_0_fetch_events/: ga4.py
article_rec_training_job/components/: __init__.py
article_rec_training_job/components/_0_fetch_events/: __init__.py  ga4.py
article_rec_training_job/components/article_recommenders/traffic_based/: popularity.py
article_rec_training_job/components/event_fetchers/: ga4.py
article_rec_training_job/components/page_fetchers/: helpers.py  wordpress.py
article_rec_training_job/components/page_writers/: postgres.py
article_rec_training_job/components/recommendation_writers/: postgres.py
article_rec_training_job/helpers/: enum.py  math.py
article_rec_training_job/shared/: README.md
article_rec_training_job/shared/helpers/: html.py  itertools.py  math.py  requests.py  time.py  urllib.py
article_rec_training_job/shared/types/: article_recommenders.py  event_fetchers.py  page_fetchers.py  page_writers.py  recommendation_writers.py
article_rec_training_job/tasks/: __init__.py  base.py  component_protocols.py  tasks.py
cdk/: cdk.context.json  package-lock.json  package.json
cdk/lib/: app-stack.ts  central-resources-stack.ts  helpers.ts  partners.ts  pipeline-stack.ts
cdk/test/: cdk.test.ts
configs/: example.yaml
db/: article.py  helpers.py  model.py  recommendation.py
db/mappings/: article.py  base.py  model.py  path.py
db/migrations/: V0001__initial_schema.sql  V0002__rename_recommendation_cols.sql  V0003__add_article_path.sql
db/models/: article.py  base.py  model.py  recommendation.py
job/: backfill_task.py  helpers.py  job.py  main.py  models.py  preprocessors.py  scraper.py
job/helpers/: datetime.py  itertools.py  knn.py  requests.py  site.py  warehouse.py
job/steps/: delete_old_models.py  evaluate_module.py  fetch.py  fetch_and_upload.py  fetch_data.py  implicit_mf.py  knn.py  preprocess.py  save_defaults.py  save_predictions.py  scrape.py  scrape_metadata.py  semantic_similarity.py  slow_knn.py  train_model.py  trainer.py  warehouse.py
job/steps/collaborative_filtering/: fetch_data.py  knn.py  save_defaults.py  save_predictions.py  scrape_metadata.py  train_model.py  trainer.py  warehouse.py
job/steps/semantic_similarity/: fetch_and_preprocess_data.py  fetch_data.py  generate_embeddings.py  generate_recs.py
job/strategies/: collaborative_filtering.py  popularity.py  save_defaults.py  save_predictions.py  semantic_similarity.py  tag_recommendation.ipynb
job/strategies/collaborative_filter/: train_model.py
job/strategies/collaborative_filtering/: train_model.py  trainer.py
job/strategies/templates/: strategy.py
lib/: bucket.py  config.py  db.py  events.py  metrics.py  save_outputs.py  secrets_manager.py
notebooks/: explore_recommender_settings.ipynb  validate_snowplow_data.ipynb
notebooks/data/: .gitignore  wcp_metadata_20201202-20201206_20200907-20201206.pkl.dvc  wcp_qa_interactions.csv.dvc  wcp_rec_module_qa.csv  wcp_sessions_20201202-20201206_20200907-20201206.csv.dvc
scripts/: article_backfill.py  backfill_task.py
sites/: article_scraping_error.py  config.py  helpers.py  ms_timestamp.py  philadelphia_inquirer.py  safe_get.py  singleton.py  site.py  sites.py  strategy.py  texas_tribune.py  validate.py  washington_city_paper.py  wcp_tamper_monkey.js
sites/config/: config.py  strategy.py
sites/helpers/: datetime.py  gtm.py  requests.py  safe_get.py  scrape_error.py  singleton.py  validate.py
sites/templates/: site.py
tests/: base.py  compose.yaml  conftest.py  test_fetch_data.py  test_helpers.py  test_preprocess.py  test_save_defaults.py  test_scrape_metadata.py
tests/data/: activities.csv  bigquery.yaml  snowplow_activities.csv
tests/factories/: article.py  model.py
tests/integration/: compose.yaml  conftest.py
tests/integration/components/article_recommenders/traffic_based/: conftest.py  test_popularity.py
tests/integration/components/event_fetchers/: ga4.py  test_ga4.py
tests/integration/components/page_writers/: test_postgres.py
tests/integration/components/recommendation_writers/: test_postgres.py
tests/integration/data/: bigquery.yaml
tests/sites/: test_helpers.py  test_philadelphia_inquirer.py
tests/unit/: config-example.yaml  conftest.py  test_app.py
tests/unit/components/page_fetchers/: test_helpers.py
tests/unit/shared/helpers/: test_itertools.py  test_urllib.py
tmp/: article_df.csv  exp_time_df.csv  filtered_df.csv  model_item_vectors.npy  vector_orders.npy  vector_similarities.npy  vector_weights.npy
