[tool.poetry]
name = "article-rec-training-job"
version = "0.1.0"
description = "Code to define, run, and orchestrate the LNL article recommendation training job."
authors = ["LocalNewsLab <mh3287@columbia.edu>"]

[tool.poetry.dependencies]
# if this python version changes, the python base image in the Dockerfile needs to change too
python = "3.11.*"
google-cloud-bigquery = "^3.13.0"
loguru = "^0.7.2"
pandas = "^2.1.3"
db-dtypes = "^1.1.1"
pandera = "^0.17.2"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pyyaml = "^6.0.1"


[tool.black]
line-length = 122
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | cdk
)/
'''

[tool.isort]
profile = "black"
